ktreesitter-kotlin/languages/bash/tree-sitter-bash/test/corpus/crlf.txt
================================
Variables with CRLF line endings
================================

A=one

B=two

---

(program
  (variable_assignment
    (variable_name)
    (word))
  (variable_assignment
    (variable_name)
    (word)))
